kubernetes/authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-io-authentication-deployment
  labels:
    app: task-io-authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-io-authentication
  template:
    metadata:
      labels:
        app: task-io-authentication
    spec:
      containers:
        - name: task-io-authentication
          image: pyankovdaniil/task.io.authentication
          ports:
            - name: rest
              containerPort: 8080
            - name: grpc
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: task-io-authentication-service
spec:
  type: LoadBalancer
  selector:
    app: task-io-authentication
  ports:
    - protocol: TCP
      name: rest
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: grpc
      port: 8081
      targetPort: 8081
