kubernetes/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: task-io-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-io-mongo
  template:
    metadata:
      labels:
        app: task-io-mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: task-io-mongo-service
spec:
  selector:
    app: task-io-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
