kubernetes/projects.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-io-projects-deployment
  labels:
    app: task-io-projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-io-projects
  template:
    metadata:
      labels:
        app: task-io-projects
    spec:
      containers:
        - name: task-io-projects
          image: pyankovdaniil/task.io.projects
          ports:
            - name: rest
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: task-io-projects-service
spec:
  type: LoadBalancer
  selector:
    app: task-io-projects
  ports:
    - protocol: TCP
      name: rest
      port: 8082
      targetPort: 8082
