kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: task-io-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-io-redis
  template:
    metadata:
      labels:
        app: task-io-redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: task-io-redis-service
spec:
  selector:
    app: task-io-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
