kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-io-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rest/api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: task-io-authentication-service
                port:
                  number: 8080
          - path: /rest/api/v1/projects
            pathType: Prefix
            backend:
              service:
                name: task-io-projects-service
                port:
                  number: 8082
